--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,14 @@
     margin: 0;
 }
 
+.hidden {
+    display: none;
+}
+
+#download-option {
+    padding: 10px 0;
+}
+
 /* nav styles */
 nav {
     display: flex;
@@ -47,6 +55,12 @@ nav {
 }
 
 /*  heading section*/
+.heading-absolute {
+    position: absolute;
+    right: 7%;
+    top: 90%;
+}
+
 .heading-text h3 {
     width: 800px;
     margin: 24px auto;
@@ -65,13 +79,18 @@ nav {
     flex-direction: column;
     justify-content: center;
     gap: 14px;
-    padding: 90px 0px;
+    padding: 110px 0px;
     background: linear-gradient(180deg, #f9f9fb 0%, #e0e7ff 50%, #d9d8ff 100%);
 }
 
-.image-heading img {
-    width: 100%;
-    background: transparent;
+.image-heading>.img {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    border-radius: 14px;
+    box-shadow: 2px solid white;
+    padding: 5px;
 }
 
 .heading-para {
@@ -310,13 +329,13 @@ nav {
 .procrast-feature-text {
     font-size: 16px;
     color: #666;
-    line-height: 160px;
+    line-height: 60px;
 }
 
-.procrast-image {
+/* .procrast-image {
     flex: 1;
     min-width: 300px;
-}
+} */
 
 .procrast-image img {
     width: 100%;
@@ -614,12 +633,12 @@ nav {
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 }
 
-.relative{
+.relative {
     position: relative;
-    
+
 }
 
-.Absolutely{
+.Absolutely {
     position: absolute;
     top: -10%;
     right: -41%;
@@ -705,4 +724,114 @@ hr {
 .copyright {
     font-size: 13px;
     color: #9ca3af;
+}
+
+/* responsive design */
+
+@media screen and (max-width: 576px) {
+
+    .navigation-list,
+    .outline,
+    .login-btn {
+        display: none;
+    }
+
+    .hidden {
+        display: flex;
+    }
+
+    .heading-text h3 {
+        font-size: 30px;
+        width: 100%;
+    }
+
+    .heading-text p {
+        font-size: 14px;
+    }
+
+    .heading-section,
+    nav {
+        padding: 10px;
+    }
+
+    .heading-section,
+    .row {
+        padding: 8px;
+    }
+
+    .relative img {
+        width: 100%;
+    }
+
+    .container,
+    .inner-box,
+    .procrast-container,
+    .testimonials,
+    .p-7,
+    .office-grid,
+    .faq-container,
+    .footer-container {
+        padding: 20px;
+    }
+
+    .row,
+    .procrast-container {
+        gap: 0;
+    }
+
+    .row img {
+        height: 60px;
+    }
+
+    .features-grid,
+    .testimonials {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .procrast-text {
+        flex-direction: column;
+        gap: 28px;
+    }
+
+    .faq-container {
+        width: 100%;
+    }
+
+    .Absolutely {
+        display: none;
+    }
+
+    .relative img {
+        width: 45%;
+
+        gap: 10px;
+    }
+
+    .download-image {
+        justify-content: space-evenly;
+    }
+
+    .procrast-feature-text {
+        line-height: 26px;
+    }
+
+    .stats {
+        padding: 20px;
+        gap: 28px;
+    }
+
+    .stat h3 {
+        font-size: 48px;
+    }
+
+    .heading-absolute {
+        position: absolute;
+        top: 64%;
+        right: 6%;
+        width: 40%;
+    }
+
+    .heading-section {
+        padding-bottom: 60px;
+    }
 }
